force-app/main/default/objects/Lead_Touch__c/Lead_Touch__c.object-meta.xml
<CustomObject>
    <label>Toque do Lead</label>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Número do Touch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toques do Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>