force-app/main/default/objects/Lead_Touch__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lead Touches</relationshipLabel>
    <relationshipName>Lead_Touches</relationshipName>
    <type>Lookup</type>
</CustomField>