force-app/main/default/objects/Lead_Touch__c/fields/CTWA_CLID__c.field-meta.xml
<CustomField>
    <fullName>CTWA_CLID__c</fullName>
    <label>CLID CTWA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>