force-app/main/default/objects/Lead_Touch__c/fields/Meta_AdSet__c.field-meta.xml
<CustomField>
    <fullName>Meta_AdSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conjunto de Anúncios Meta</label>
    <referenceTo>Meta_AdSet__c</referenceTo>
    <relationshipLabel>Lead Touches</relationshipLabel>
    <relationshipName>Lead_Touches</relationshipName>
    <type>Lookup</type>
</CustomField>