force-app/main/default/objects/Lead_Touch__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Origem</label>
    <length>80</length>
    <type>Text</type>
</CustomField>