force-app/main/default/objects/Lead_Touch__c/fields/Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Touch_Date__c</fullName>
    <label>Data do Toque</label>
    <type>DateTime</type>
</CustomField>